--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Evolution (Biology)'
 - !lcc 'QH'
 - !lcsh 'Heredity'
+- GITenberg
 title: "Darwin, and After Darwin, Volume 3 of 3\r\nPost-Darwinian Questions: Isolation\
   \ and Physiological Selection"
 url: http://www.gutenberg.org/ebooks/37777
